--- a/src/main/resources/templates/HomeView.html
+++ b/src/main/resources/templates/HomeView.html
@@ -162,6 +162,40 @@
                 toward raising awareness of nature preservation.</p>
         </div>
     </section>
+
+    <section class="prizes-info">
+        <div class="container">
+            <h2>Prizes and Ranks</h2>
+            <p>As part of our Photography Contest, participants have the chance to win amazing prizes and earn ranks based on their performance. Here's how the ranking and scoring system works:</p>
+
+            <div class="flex-container">
+                <div class="flex-item">
+                    <h3>How to Earn Points</h3>
+                    <ul>
+                        <li>Joining an open contest: 1 point</li>
+                        <li>Being invited by an organizer: 3 points</li>
+                        <li>3rd place: 20 points (10 points if tied)</li>
+                        <li>2nd place: 35 points (25 points if tied)</li>
+                        <li>1st place: 50 points (40 points if tied)</li>
+                        <li>Double score victory: 75 points <br><span class="details">(if the 1st place score is double the 2nd place score)</span></li>
+
+                    </ul>
+                </div>
+                <div class="flex-item">
+                    <h3>Rank System</h3>
+                    <ul>
+                        <li>Junkie: 0-50 points</li>
+                        <li>Enthusiast: 51-150 points</li>
+                        <li>Master: 151-1000 points <br><span class="details">(eligible to be invited as a jury member)</span></li>
+                        <li>Wise and Benevolent Photo Dictator: 1001+ points <br><span class="details">(still eligible to be a jury member)</span></li>
+                    </ul>
+                </div>
+            </div>
+
+            <h3>Prizes</h3>
+            <p>Participants with the highest scores will win exclusive prizes, including photography gear, sponsored trips, and feature articles in top photography magazines. The higher your rank, the more prestigious the rewards!</p>
+        </div>
+    </section>
 </main>
 
 <footer>
