--- a/src/main/resources/static/css/HomeView.css
+++ b/src/main/resources/static/css/HomeView.css
@@ -145,6 +145,7 @@ body {
 }
 
 .contest-info h2 {
+    font-family: 'Lobster', cursive;
     font-size: 2.2em;
     margin-bottom: 20px;
 }
@@ -192,25 +193,27 @@ footer a:hover {
 .flex-container {
     display: flex;
     justify-content: center; /* Центрира колоните */
-    gap: 50px; /* Разстояние между двете колони */
+    gap: 30px; /* Намалено разстояние между колоните */
+    text-align: center;
 }
 
-.flex-item {
-    width: 40%; /* Равномерна ширина на колоните */
-    text-align: left; /* Подравнява текста наляво вътре в колоните */
+.prizes-info p {
+    max-width: 600px; /* Задава максимална ширина, за да разбие текста на 2 реда */
+    margin: 0 auto; /* Центрира текста в контейнера */
+    font-size: 1.1em; /* Малко по-голям шрифт за по-добра четливост */
+    line-height: 1.6; /* Разстояние между редовете */
+    text-align: center; /* Центрира текста под Prizes */
 }
 
 .prizes-info h3 {
-    font-size: 2em;
+    font-size: 1.8em; /* Намаляване на размера на заглавията */
     color: #e74c3c;
     margin-bottom: 15px;
 }
 
-.prizes-info ul {
-    list-style-type: disc;
-    list-style-position: inside;
-    margin: 0;
-    padding-left: 20px;
+.prizes-info ul li {
+    font-size: 1em; /* По-малък шрифт за по-добра четливост */
+    color: #333;
 }
 
 .prizes-info ul li {
@@ -227,7 +230,7 @@ footer a:hover {
     }
 
     .flex-item {
-        width: 100%; /* Ширина 100% за по-малки екрани */
+        width: 90%; /* Ширина 90% за по-малки екрани */
         text-align: center;
     }
 }
