--- a/src/main/resources/static/css/photos.css
+++ b/src/main/resources/static/css/photos.css
@@ -119,10 +119,13 @@ body {
 
 /* Footer */
 footer {
-    background-color: #333;
-    color: #fff;
     text-align: center;
     padding: 20px 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    width: 100%;
+    position: relative;
+    bottom: 0;
     margin-top: auto;
 }
 
