--- a/src/main/resources/static/css/rating.css
+++ b/src/main/resources/static/css/rating.css
@@ -124,6 +124,9 @@ footer {
     padding: 20px 0;
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
+    width: 100%;
+    position: relative;
+    bottom: 0;
     margin-top: auto;
 }
 
