--- a/src/main/resources/templates/ContestViewPhase1.html
+++ b/src/main/resources/templates/ContestViewPhase1.html
@@ -15,6 +15,8 @@
         <nav>
             <ul class="nav-links">
                 <li><a th:href="@{/}">Home</a></li>
+                <li><a href="#" th:if="${isAuthenticated}" th:href="@{/contest/phaseOne}">Contests In Phase
+                    1</a></li>
                 <li><a href="#" th:unless="${isAuthenticated}" th:href="@{/auth/login}">Login</a></li>
                 <li><a href="#" th:unless="${isAuthenticated}" th:href="@{/auth/register}">Register</a></li>
                 <li><a href="#" th:if="${isAuthenticated}" th:href="@{/user/me}">My Profile</a></li>
